fixade position och z-index QUIZ

--- a/studyAbroad/CSSfiler/home.css
+++ b/studyAbroad/CSSfiler/home.css
@@ -143,8 +143,9 @@
   height: 400px;
   /* overflow: scroll; */
   overflow: hidden;
-  z-index: 100;
+  z-index: 10;
   margin-top: -200px;
+  position: relative;
 }
 
 .quiz-inner {
@@ -190,13 +191,12 @@
   border-radius: 20px;
   width: 50px;
 
-  padding: 0.5rem 1.5rem;
   border: 1px solid black;
   
   box-shadow: 1px 1px 3px #353434;
   border-radius: 50%;
   font-weight: 300;
-  color: white;
+
   outline: none;
   transform: scale(0.98);
   transition: all 0.2s;
@@ -445,11 +445,6 @@ button:hover{
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-
-.homeInterview .smallAd {
-  width: 250px;
-  height: 250px;
 }
 
 .smallIntw {
